// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateZodSchemas locale modes > mode both emits flat and delivery schemas plus flatten helpers 1`] = `
"/**
 * @generated by @xndrjs/contentful-to-zod
 * Do not edit manually.
 */

import { z } from "zod";

/** @generated from space locales snapshot */
export const ContentfulLocaleCodeSchema = z.enum(["en-US", "it-IT"]);
export type ContentfulLocaleCode = z.infer<typeof ContentfulLocaleCodeSchema>;

export const CONTENTFUL_LOCALE_CODES = ContentfulLocaleCodeSchema.options;
export const CONTENTFUL_DEFAULT_LOCALE = "en-US" as const;

/**
 * Flat/CMA field wrapper: omitted keys and explicit null both normalize to \`null\`.
 * Use after \`flatten*\` or when parsing a normalized flat shape.
 */
export function flatField<T extends z.ZodType>(schema: T) {
  return schema.nullable().optional().transform((value) => value ?? null);
}

/**
 * Delivery/Preview field wrapper: omitted keys and explicit null both normalize to \`null\`.
 * CMA \`required\` does not apply at the transport boundary.
 */
export function transportField<T extends z.ZodType>(schema: T) {
  return schema.nullable().optional().transform((value) => value ?? null);
}

export const ContentfulResourceLinkSchema = z.object({
  sys: z.object({
    type: z.literal("Link"),
    linkType: z.string(),
    id: z.string(),
  }),
});

/** Loose Delivery/Preview entry metadata; extra Contentful fields pass through. */
export const ContentfulEntrySysSchema = z.looseObject({
  id: z.string(),
  type: z.literal("Entry"),
  createdAt: z.string(),
  updatedAt: z.string(),
  revision: z.number(),
  contentType: z.object({
    sys: z.object({
      type: z.literal("Link"),
      linkType: z.literal("ContentType"),
      id: z.string(),
    }),
  }),
  space: ContentfulResourceLinkSchema,
  environment: ContentfulResourceLinkSchema,
  locale: ContentfulLocaleCodeSchema.optional(),
  publishedVersion: z.number().optional(),
});

export const ContentfulLocationSchema = z.object({ "lat": z.number(), "lon": z.number() });

export const ContentfulEntryLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) });

export const ContentfulAssetLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Asset"), "id": z.string() }) });

export const BlogPostFieldSchema = z.object({
  "title": flatField(z.string().max(256)),
  "slug": flatField(z.string()),
  "author": flatField(z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) })),
  "excerpt": flatField(z.string()),
});

export type BlogPostFields = z.infer<typeof BlogPostFieldSchema>;

export const BlogPostDeliveryFieldsSchema = z.object({
  "title": transportField(z.record(ContentfulLocaleCodeSchema, z.string().max(256))),
  "slug": transportField(z.string()),
  "author": transportField(z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) })),
  "excerpt": transportField(z.record(ContentfulLocaleCodeSchema, z.string())),
});

export type BlogPostDeliveryFields = z.infer<typeof BlogPostDeliveryFieldsSchema>;

export const BlogPostEntrySchema = z.object({
  sys: ContentfulEntrySysSchema.extend({
    contentType: z.object({
      sys: z.object({
        type: z.literal("Link"),
        linkType: z.literal("ContentType"),
        id: z.literal("blogPost"),
      }),
    }),
  }),
  fields: BlogPostDeliveryFieldsSchema,
});

export type BlogPostEntry = z.infer<typeof BlogPostEntrySchema>;


/** Read one locale from a localized delivery field; missing locale or null input → \`null\`. */
export function pickLocale<T>(
  value: Record<ContentfulLocaleCode, T> | null,
  locale: ContentfulLocaleCode = CONTENTFUL_DEFAULT_LOCALE,
): T | null {
  if (value === null) {
    return null;
  }
  return value[locale] ?? null;
}

/** Flatten validated \`BlogPostDeliveryFields\` (from \`entry.fields\`) to \`BlogPostFields\` for a single locale. */
export function flattenBlogPostEntryFields(
  fields: BlogPostDeliveryFields,
  _locale: ContentfulLocaleCode = CONTENTFUL_DEFAULT_LOCALE,
): BlogPostFields {
  return {
    "title": pickLocale(fields.title ?? null, _locale),
    "slug": fields.slug ?? null,
    "author": fields.author ?? null,
    "excerpt": pickLocale(fields.excerpt ?? null, _locale),
  };
}
"
`;

exports[`generateZodSchemas locale modes > mode cma emits only flat schemas without locale primitives or helpers 1`] = `
"/**
 * @generated by @xndrjs/contentful-to-zod
 * Do not edit manually.
 */

import { z } from "zod";

/**
 * Flat/CMA field wrapper: omitted keys and explicit null both normalize to \`null\`.
 * Use after \`flatten*\` or when parsing a normalized flat shape.
 */
export function flatField<T extends z.ZodType>(schema: T) {
  return schema.nullable().optional().transform((value) => value ?? null);
}

export const ContentfulLocationSchema = z.object({ "lat": z.number(), "lon": z.number() });

export const ContentfulEntryLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) });

export const ContentfulAssetLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Asset"), "id": z.string() }) });

export const BlogPostFieldSchema = z.object({
  "title": flatField(z.string().max(256)),
  "slug": flatField(z.string()),
  "author": flatField(z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) })),
  "excerpt": flatField(z.string()),
});

export type BlogPostFields = z.infer<typeof BlogPostFieldSchema>;
"
`;

exports[`generateZodSchemas locale modes > mode delivery emits delivery schemas and pickLocale without flatten helpers 1`] = `
"/**
 * @generated by @xndrjs/contentful-to-zod
 * Do not edit manually.
 */

import { z } from "zod";

/** @generated from space locales snapshot */
export const ContentfulLocaleCodeSchema = z.enum(["en-US", "it-IT"]);
export type ContentfulLocaleCode = z.infer<typeof ContentfulLocaleCodeSchema>;

export const CONTENTFUL_LOCALE_CODES = ContentfulLocaleCodeSchema.options;
export const CONTENTFUL_DEFAULT_LOCALE = "en-US" as const;

/**
 * Delivery/Preview field wrapper: omitted keys and explicit null both normalize to \`null\`.
 * CMA \`required\` does not apply at the transport boundary.
 */
export function transportField<T extends z.ZodType>(schema: T) {
  return schema.nullable().optional().transform((value) => value ?? null);
}

export const ContentfulResourceLinkSchema = z.object({
  sys: z.object({
    type: z.literal("Link"),
    linkType: z.string(),
    id: z.string(),
  }),
});

/** Loose Delivery/Preview entry metadata; extra Contentful fields pass through. */
export const ContentfulEntrySysSchema = z.looseObject({
  id: z.string(),
  type: z.literal("Entry"),
  createdAt: z.string(),
  updatedAt: z.string(),
  revision: z.number(),
  contentType: z.object({
    sys: z.object({
      type: z.literal("Link"),
      linkType: z.literal("ContentType"),
      id: z.string(),
    }),
  }),
  space: ContentfulResourceLinkSchema,
  environment: ContentfulResourceLinkSchema,
  locale: ContentfulLocaleCodeSchema.optional(),
  publishedVersion: z.number().optional(),
});

export const ContentfulLocationSchema = z.object({ "lat": z.number(), "lon": z.number() });

export const ContentfulEntryLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) });

export const ContentfulAssetLinkSchema = z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Asset"), "id": z.string() }) });

export const BlogPostDeliveryFieldsSchema = z.object({
  "title": transportField(z.record(ContentfulLocaleCodeSchema, z.string().max(256))),
  "slug": transportField(z.string()),
  "author": transportField(z.object({ "sys": z.object({ "type": z.literal("Link"), "linkType": z.literal("Entry"), "id": z.string() }) })),
  "excerpt": transportField(z.record(ContentfulLocaleCodeSchema, z.string())),
});

export type BlogPostDeliveryFields = z.infer<typeof BlogPostDeliveryFieldsSchema>;

export const BlogPostEntrySchema = z.object({
  sys: ContentfulEntrySysSchema.extend({
    contentType: z.object({
      sys: z.object({
        type: z.literal("Link"),
        linkType: z.literal("ContentType"),
        id: z.literal("blogPost"),
      }),
    }),
  }),
  fields: BlogPostDeliveryFieldsSchema,
});

export type BlogPostEntry = z.infer<typeof BlogPostEntrySchema>;


/** Read one locale from a localized delivery field; missing locale or null input → \`null\`. */
export function pickLocale<T>(
  value: Record<ContentfulLocaleCode, T> | null,
  locale: ContentfulLocaleCode = CONTENTFUL_DEFAULT_LOCALE,
): T | null {
  if (value === null) {
    return null;
  }
  return value[locale] ?? null;
}
"
`;
